--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 Hey I am Victor Ukachukwu
             </h1>
             <p>I can be your frontend engineer</p>
-            <button type="button" class="btn btn-primary" id="get-quote">Hire Me</button>
+            <button type="button" class="btn btn-primary" id="get-quote" onclick="location.href='#contact'"> Hire Me</button>
         </div>
     </section>
 
@@ -102,12 +102,10 @@
             <p>Want to change the world?</p>
         </div>
         <div class="social-links">
-            <a href="#" class="btn contact-details"><i class="fab fa-facebook-square"></i> Facebook</a>
-            <a href="#" class="btn contact-details"><i class="fab fa-github"></i> Github</a>
-            <a href="#" class="btn contact-details"><i class="fab fa-twitter"></i> Twitter</a>
-            <a href="#" class="btn contact-details"><i class="fab fa-linkedin"></i> Linkedin</a>
-            <a href="#" class="btn contact-details"><i class="fas fa-at"></i> Send a mail</a>
-            <a href="#" class="btn contact-details"><i class="fas fa-mobile-alt"></i> Call me</a>
+            <a href="https://github.com/thevictorcode" class="btn contact-details"><i class="fab fa-github"></i> Github</a>
+            <a href="https://linkedin.com/in/vic-uka" class="btn contact-details"><i class="fab fa-linkedin"></i> Linkedin</a>
+            <a href="mailto:thevictorukachukwu@gmail.com" class="btn contact-details"><i class="fas fa-at"></i> Send a mail</a>
+            <a href="tel:+23408106509742" class="btn contact-details"><i class="fas fa-mobile-alt"></i> Call me</a>
         </div>
     </section>
 
