--- a/index.html
+++ b/index.html
@@ -27,19 +27,19 @@
         <h1>
             Hey I am Victor Ukachukwu
         </h1>
-        <p>I can be your frontend engineer</p>
-        <button type="button" class="btn btn-primary" id="get-quote" onclick="location.href='#contact'"> Hire Me</button>
+        <p>I am a product manager and frontend engineer</p>
+        <button type="button" class="btn btn-primary" id="get-quote" onclick="location.href= 'https://myresume-thevictorcode.netlify.app'"> Check My Resume</button>
     </div>
 </section>
 
 <section class="recent-works" id="recentwork">
     <h2 class="recent-works-title">These are some of my projects</h2>
     <div class="project-grid">
-        <a href="" class="project">
-            <img src="/images/age capture.JPG" alt="Age in days" class="project-image">
+        <a href="https://printname-thevictorcode.netlify.app/" target="_blank" class="project">
+            <img src="/images/Print Name Code.JPG" alt="Print My Name" class="project-image">
                 <h4>
                     <span class="code">&lt;</span>
-                        Age Calculator
+                        Print My Name
                     <span class="code">&#47;&gt;</span>
                     
                 </h4>
@@ -47,7 +47,7 @@
                     {Built with HTML, CSS & JavaScript}
                 </p>
         </a>
-        <a href="#" class="project">
+        <a href="https://tributepage-thevictorcode.netlify.app/" target="_blank" class="project">
             <img src="/images/steve.JPG" alt="Age in days" class="project-image">
                 <h4>
                     <span class="code">&lt;</span>
@@ -59,8 +59,21 @@
                     {Built with HTML, CSS}
                 </p>
         </a>
-        <a href="" class="project">
-            <img src="/images/survey.JPG" alt="Age in days" class="project-image">
+        <a href="https://myresume-thevictorcode.netlify.app/" target="_blank" class="project">
+            <img src="/images/My Resume.JPG" alt="Resume" class="project-image">
+                <h4>
+                    <span class="code">&lt;</span>
+                        My Online Resume 
+                    <span class="code">&#47;&gt;</span>
+                    <br>
+                    
+                </h4>
+                <p>
+                    {Built with HTML, CSS & JavaScript}
+                </p>
+        </a>
+        <a href="https://surveyform-thevictorcode.netlify.app/" target="_blank" class="project">
+            <img src="/images/survey.JPG" alt="Survey" class="project-image">
                 <h4>
                     <span class="code">&lt;</span>
                         Survey Form 
@@ -72,7 +85,7 @@
                     {Built with HTML, CSS}
                 </p>
         </a>
-        <a href="" class="project">
+        <a href="https://thevictorcode.github.io" target="_blank" class="project">
             <img src="/images/portfolio.JPG" alt="Age in days" class="project-image">
                 <h4>
                     <span class="code">&lt;</span>
@@ -92,11 +105,11 @@
 
 <section class="about" id="about">
     <h2>A brief bio...</h2>
-    <figure><img src="/images/vikk.png" alt=""></figure>
+    <figure><img src="/images/vic.png" alt=""></figure>
     <figcaption style="text-align: center;">Victor Ukachukwu</figcaption>
     <div class="text-field">
         <p>
-            I am a tech entrepreneur and a certified innovation leader. I am also a vastly experienced wordpress web designer and I recently ventured into frontend engineering.
+            I am a tech entrepreneur and a certified innovation leader. I am also a vastly experienced product manager, frontend web developer and wordpress web designer.
         </p>
 
     </div>
