--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <h1>
             Hey I am Victor Ukachukwu
         </h1>
-        <p>I am a product manager and frontend engineer</p>
+        <p>I am a product manager and frontend developer</p>
         <button type="button" class="btn btn-primary" id="get-quote" onclick="location.href= 'https://myresume-thevictorcode.netlify.app'"> Check My Resume</button>
     </div>
 </section>
