--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
 <section class="about" id="about">
     <h2>A brief bio...</h2>
-    <figure><img src="/images/vic.png" alt=""></figure>
+    <figure><img src="/images/vikk.png" alt=""></figure>
     <figcaption style="text-align: center;">Victor Ukachukwu</figcaption>
     <div class="text-field">
         <p>
