--- a/index.html
+++ b/index.html
@@ -97,6 +97,18 @@
                     {Built with HTML, CSS & JavaScript}
                 </p>
         </a>
+        <a href="https://agecalculator-thevictorcode.netlify.app/" target="_blank" class="project">
+            <img src="/images/agecalc.JPG" alt="Age calculator" class="project-image">
+                <h4>
+                    <span class="code">&lt;</span>
+                        Age Calculator
+                    <span class="code">&#47;&gt;</span>
+                    
+                </h4>
+                <p>
+                    {Built with HTML, CSS & JavaScript}
+                </p>
+        </a>
     </div>
     <a href="#" class="btn btn-show-all">Show All <i class="fas fa-chevron-right"></i>
     </a>
